--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,5 @@ jobs:
     steps:
       - name: HACS Action
         uses: "hacs/action@main"
-        
+        with:
+          category: "plugin"
