--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "es6",
-    "target": "es6",
+    "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
     "allowJs": true,
     "moduleResolution": "node",
     "jsx": "react-jsx",
