add GUI, depricate backout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./globalTypes"],
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "es6",
@@ -12,6 +13,6 @@
     "baseUrl": ".",
     "paths": {
       "*": ["./src/*"],
-    }
+    },
   }
 }
